Fixed overflow hide issue on home page

--- a/styles/home.css
+++ b/styles/home.css
@@ -3,7 +3,6 @@ html {
     width: 100vw;
     height: 100vh;
     overflow-x: hidden;
-    overflow-y: hidden;
 }
 
 .hero-img {
